--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -19,15 +19,14 @@ While aggregate abundance-based LRPs are consistent with what is typically used 
 
 When developing aggregate abundance-based LRP options for salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above poor status. We use two different methods to identify these levels: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review).
 
-The above definitions hinge on what defines 'poor' CU status. In the case of WSP Integrated Status Assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone (@canadaCanadaPolicyConservation2005, @grant2017FraserSockeye2020). While WSP Integrated status assessments are typically intensive expert-driven processes, we demonstrate the application of a multidimensional scanning tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP. In cases where up-to-date estimates of WSP integrated status or mutlidimensional rapid status are not available, the delineation of poor CU status may be based on being below a single lower benchmark that has been identified as important for individual CUs by local experts. A variety of methods are available for estimating lower benchmarks depending on species and data availability (@holtIndicatorsStatusBenchmarks2009, @holtEvaluatingBenchmarksBiological2018, @grant2017FraserSockeye2020]. For example, if stock recruit data is available, as was the case for our IFCoho case study, $S_{gen}$ may be used as a CU benchmark that defines 'poor' status, where $S_{gen}$ is the number of spawners required to recover to $S_{MSY}$ (spawners maximum sustainable yield) within one generation under equilibrium conditions in the absence of fishing [@holtIndicatorsStatusBenchmarks2009]. In cases where there are no reliable stock-recruit data, estimates of $S_{gen}$ may be based on habitat-area models (as per our WCVI Chinook Case Study) or other types of relative abundance-based benchmarks may be used, such as percentiles of historically observed escapement values (as per our ISC Chum case study). 
+The above definitions hinge on what defines 'poor' CU status. In the case of WSP Integrated Status Assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone (@canadaCanadaPolicyConservation2005, @grant2017FraserSockeye2020). While WSP Integrated status assessments are typically intensive expert-driven processes, we demonstrate the application of a multidimensional scanning tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP. When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on a single lower benchmark that has been identified as important for individual CUs by local experts. A variety of methods are available for estimating lower benchmarks depending on species and data availability (@holtIndicatorsStatusBenchmarks2009, @holtEvaluatingBenchmarksBiological2018, @grant2017FraserSockeye2020]. 
  
-
 
 ## PROPORTION-BASED LRPS
 
 A proportion-based LRP is simply the proportion of CUs required to be assessed as being above poor status. In all three case studies, we default to 100% of CUs being required to be above poor status when setting the LRP. In this case, the LRP acts as a trigger that is breached when one of more CUs is assessed as having poor status. Guidance on how to select the required proportion, including when it may be appropriate to consider proportions < 100%, is provided in the companion working paper *Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units* (Holt et al. in review). 
 
-We compare three different methods of assessing CU status when using proportion-based LRPs: (i) the proportion of CUs with a recent Integrated Status assessment above the red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent rapid multidimensional status assessment above red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single type of CU lower benchmark (e.g., $S_{gen}$, percentile-babsed benchmarks, etc.) 
+We compare three different methods of assessing CU status when using proportion-based LRPs: (i) the proportion of CUs with a recent Integrated Status assessment above the red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent rapid multidimensional status assessment above red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single type of CU lower benchmark (e.g., $S_{gen}$, percentile-babsed benchmarks, etc.). 
 
 
 ### Rapid Multidimensional Status Assessment Tool{#rapidToolMethods}
@@ -38,7 +37,7 @@ For multi-dimensional status, we are using the term ‘lower benchmark’ to be 
 
 -->
 
-One of the methods we consider to estimate CU status for proportion-based LRP relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using a scanner tool that has recently been developed by DFO's State of the Salmon Program (@pestalAlgorithmsRapidStatus2021, in prep). The scanning tool is intended to support implementation of Canada's WSP by approximating the outcomes of full Integrated Status Assessments on an more regular basis than application of the data and time-intensive Integrated Status Assessment methodology allows. The rapid multidimensional scanning tool was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from thee Integrated Assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook (@dfoWildSalmonPolicy2015, @dfoIntegratedBiologicalStatus2016, @dfo2017FraserSockeye2018,  @grant2017FraserSockeye2020). Essentially, it uses a decision tree to evaluate status based on data type, quality, abundance, and trends to assign a status to CUs (e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers comm). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm using expert opinion. 
+One of the methods we consider to estimate CU status for proportion-based LRP relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using a scanner tool that has recently been developed by DFO's State of the Salmon Program (@pestalAlgorithmsRapidStatus2021, in prep). The scanning tool is intended to support implementation of Canada's WSP by approximating the outcomes of full Integrated Status Assessments on an more regular basis than time-intensive Integrated Status Assessment methods allows. The rapid multidimensional scanning tool was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from thee Integrated Assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook (@dfoWildSalmonPolicy2015, @dfoIntegratedBiologicalStatus2016, @dfo2017FraserSockeye2018,  @grant2017FraserSockeye2020). Essentially, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends t(e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers comm). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm using expert opinion. 
 
 
 ```{r decision-tree, fig.cap="Decision tree to assess status of Conservation Units based on the Wild Salmon Policy, under development by State of the Salmon Program", warning=FALSE, echo=FALSE, fig.align="center"}
@@ -49,7 +48,7 @@ knitr::include_graphics("figure/decision_tree.png")
 
 ## AGGREGATE ABUNDANCE-BASED LRPS
 
-Aggregate abundance-based LRPs represent the SMU-level abundance at which there is a sufficiently high probability that 100% of CUs will be above their individual benchmarks. This definition requires a decision to be made about what represents a 'sufficiently high probability' that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in the working paper *Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units* (Holt et al. in review).  For our case studies, we focus on a 50% probability threshold for sensitivity analyses, but show sensitivity to other values.  
+Aggregate abundance-based LRPs represent the SMU-level abundance at which there is a sufficiently high probability that 100% of CUs will be above a single selected benchmark. This definition requires a decision to be made about what represents a 'sufficiently high probability' that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in the working paper *Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units* (Holt et al. in review).  For our case studies, we focus on a 50% probability threshold for sensitivity analyses, but show sensitivity to other values.  
  
 We consider two types of aggregate abundance-based LRPs in our case studies: Logistic regression-based LRPs and Projection-based LRPs.  Logistic regression LRPs are estimated using historical data, and thus represent conditions that have been previously experienced by a SMU. In comparison, projection-based LRPs use historical data as a basis for quantifying population dynamics, but are based on projections of future states, and thus, allow uncertainty in future processes to be accounted for through alternative scenarios.  
 
@@ -216,14 +215,12 @@ The following steps were taken to calculate projected LRPs using samSim:
 \end{equation}
 For example, if 50 of the 200 realizations that fell within the $SAgg_{bin}$ of 10,000 - 12,000 fish were 'successes', there would be a 25% probability (50 / 200 = 0.25) that all CUs would be above their lower benchmarks when aggregate abundances are between 10,000 and 12,000 fish.
 
-   4. Identify the LRP as the aggregate abundance bin, $AggS_{bin}$, that is closest to the required probability threshold that all CUs are above their LBMs.
+   4. Identify the LRP as the mid-point of the aggregate abundance bin, $AggS_{bin}$, that is closest to the required probability threshold that all CUs are above their LBMs.
+
+An example of the derivation of an LRP from the projected curve of aggregate abundance bins versus the probability of all CUs being > their lower benchmark is shown in Figure \@ref(fig:example-projectedCurve) for the four probability levels used in our case studies (p* = 0.5, 0.66, 0.90, and 0.99). Uncertainty estimates for LRPs are not available based on this method, but LRP estimates could be presented as a range based on the $SAgg_{bin}$ bin size.
 
 
-An example of the derivation of an LRP from the projected curve of aggregate abundance bins versus the probability of all CUs being > their lower benchmark is shows in Figure @ref(fig:example-projectedCurve) for the four probability levels used in our case studies (p = 0.5, 0.66, 0.90, and 0.99). Uncertainty estimates for LRPs are not available based on this method, but that LRP estimates should be presented as a range based on the $SAgg_{bin}$ bin size.
-
-
-
-```{r example-projectedCurve, fig.cap="Example of projected probability curve derived from projections over 30 years and 10,000 MC trials.  The curve shows the projected probability of all CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance, with each dot in teh curve representing a single combination of year and simulation replicate. Coloured lines demonstrate how aggregate abundance LRPs are calculated for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) probability that all CUs are greater than their LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
+```{r example-projectedCurve, fig.cap="Example of projected probability curve derived from projections over 30 years and 10,000 MC trials.  The curve shows the projected probability of all CUs being above their lower benchmark (LBM) as a function of aggregate SMU abundance, where aggregate spawning abundance is really a bin of 200 fish (e.g., 0-200, 200-400, etc). Each dot in the curve represents a single combination of year and simulation trial. Coloured lines demonstrate how aggregate abundance LRPs are calculated for 4 different probability thresholds: p* = 0.5 (yellow), 0.66 (blue), 0.90 (green), and 0.99 (orange) probability that all CUs are greater than their LBM. Horizontal dotted lines intersect the y-axis at each probability threshold, while the solid vertical lines show the corresponding aggregate escapement that will represent the LRP.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/methods-Example-ProjectedLRP.png")
 ```
 
